Fix: Made changes to nav toggler height to fix issue where toggler was not collapsing properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,9 @@ body, html{
 
 .navbar {
 	    padding: .2rem;
-        margin-top: -200px;
+        margin-top: 0px;
+		height: fit-content;
+ 
  }
 
 .navbar-dark .navbar-toggler {
